2007-09-29  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/source_info_cache_entry.rb: Correctly handle URIs.
	* lib/rubygems/remote_fetcher.rb: ditto.

2007-09-28  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/rubygems.rb: Gem.ruby now returns the full path.  Added
	Gem.prefix to make self updating work right.
	* setup.rb, pre-install.rb, post-install.rb: Replace with a small,
	simple setup script that works.
	* lib/rubygems/commands/update_command.rb: Pass rdoc, ri and prefix
	flags down to setup.rb when self updating.

2007-09-26  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/version_option.rb: Always include RUBY platform,
	allow RUBY platform as an option.
	* lib/rubygems/specification.rb: Gems with non-ruby platform sort
	last (first in preference for installation).
	* lib/rubygems/platform.rb: Allow matching of legacy platforms.
	* lib/rubygems/source_index.rb: Add only_platform option to #search.

2007-09-23  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/commands/fetch_command.rb: `gem fetch` downloads a gem
	to the current directory.  Feature request #10752 by Bret Pettichord.
	* lib/rubygems/commands/local_remote_options.rb, etc.: Fix spelling of
	'threshold'.
	* lib/rubygems/installer.rb: Revert feature request #8818, it
	interferes with `ruby -S` and multiple versions of ruby (1.8 and 1.9).
	* lib/rubygems/dependency_installer.rb: Fix a bug where the wrong
	platform gem would be installed.
	* lib/rubygems/version_option.rb: Add --platform.
	* lib/rubygems/install_update_options.rb: Verify --security-policy.
	* lib/rubygems/local_remote_options.rb: Verify --source, --http-proxy.

2007-09-22  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/open-uri.rb: Don't document our OpenURI.
	* lib/rubygems/commands/generate_index_command.rb: Fix Indexer class
	change.
	* lib/rubygems/commands/mirror_command.rb: Fix for 1.9.
	* lib/rubygems/commands/pristine_command.rb: Have `gem pristine`
	give a better report of what it accomplished.